adding scoped values to the investigation